Add mapstruct
