# infrastructure/adapter-persistence-spring-data-jpa/src/main/java/eteosf/hexagonal/persistence/jpa/adapter/ProductSpringJpaAdapter.java
@@ -2,56 +2,38 @@ package eteosf.hexagonal.persistence.jpa.adapter;
 
 import eteosf.hexagonal.domain.model.Product;
 import eteosf.hexagonal.domain.spi.ProductPersistencePort;
-import eteosf.hexagonal.persistence.jpa.entity.ProductEntity;
+import eteosf.hexagonal.persistence.jpa.mapper.ProductMapper;
 import eteosf.hexagonal.persistence.jpa.repository.ProductRepository;
-import org.springframework.beans.BeanUtils;
+import lombok.AllArgsConstructor;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
+@AllArgsConstructor
 public class ProductSpringJpaAdapter implements ProductPersistencePort {
 
-    private ProductRepository productRepository;
+    private final ProductRepository productRepository;
 
-    public ProductSpringJpaAdapter(ProductRepository productRepository) {
-        this.productRepository = productRepository;
-    }
+    private final ProductMapper mapper;
 
     @Override
     public void addProduct(Product product) {
-        ProductEntity productEntity = new ProductEntity();
-        BeanUtils.copyProperties(product, productEntity);
-        productRepository.save(productEntity);
+        productRepository.save(mapper.toProductEntity(product));
     }
 
     @Override
     public void removeProduct(Product product) {
-        ProductEntity productEntity = new ProductEntity();
-        BeanUtils.copyProperties(product, productEntity);
-        productRepository.delete(productEntity);
+        productRepository.delete(mapper.toProductEntity(product));
     }
 
     @Override
     public List<Product> getProducts() {
-        List<Product> productList = new ArrayList<Product>();
-        List<ProductEntity> productEntityList = productRepository.findAll();
-        for(ProductEntity productEntity : productEntityList) {
-            Product product = new Product();
-            BeanUtils.copyProperties(productEntity, product);
-            productList.add(product);
-        }
-        return productList;
+        return productRepository.findAll().stream().map(mapper::toProduct).collect(Collectors.toList());
     }
 
     @Override
     public Product getProductById(Integer productId) {
-        ProductEntity productEntity = productRepository.findByProductId(productId);
-        if (productEntity == null) {
-            // throw new ProductNotFoundException
-        }
-        Product product = new Product();
-        BeanUtils.copyProperties(productEntity, product);
-
-        return product;
+        return mapper.toProduct(productRepository.findByProductId(productId)
+                .orElseThrow(() -> new RuntimeException("The product  not exist")));
     }
 }
