# infrastructure/adapter-persistence-spring-data-jpa/src/main/java/eteosf/hexagonal/persistence/jpa/repository/ProductRepository.java
@@ -3,7 +3,9 @@ package eteosf.hexagonal.persistence.jpa.repository;
 import eteosf.hexagonal.persistence.jpa.entity.ProductEntity;
 import org.springframework.data.jpa.repository.JpaRepository;
 
+import java.util.Optional;
+
 public interface ProductRepository extends JpaRepository<ProductEntity, Integer> {
 
-    ProductEntity findByProductId(Integer productId);
+    Optional<ProductEntity> findByProductId(Integer productId);
 }
